fixed font size on mobile start button

--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,7 @@ a .splashButton {
  #startButton {
    margin: 1% auto;
    width: 100%;
+   font-size: 1.5em;
  }
 
  .gameInfoButtons {
